responsive horizontal scrollbar fix at 320px

--- a/src/app/main-page/about-me/about-me.component.sass
+++ b/src/app/main-page/about-me/about-me.component.sass
@@ -67,7 +67,7 @@ p
 #aboutmeCard
     @extend .cardContainer
     @media screen and ( max-width: 325px )
-        padding: 27px 30px
+        padding: 27px 29px
 
     p
         color: white
